\name{NEWS}
\title{Taxonstand News}
\encoding{UTF-8}

\section{Changes in version 2.2}{

  \subsection{NEW FEATURES}{
    \itemize{

      \item Spelling errors can be now corrected also in the genus name prior to taxonomic standardization.

     } %itemize
  } % features

} % 2.2