@@ -1,10 +1,10 @@
-f37d83aa02f27a991c60f0ecf7dab9ef *DESCRIPTION
+4cf5fc5b40b4766c944047f28a9b159d *DESCRIPTION
 2ac41c7fb2c409b8d68e1e0458e99c46 *NAMESPACE
-3040ec9c37eb869b87ac2d5cefde9bdc *R/TPL.R
-19527ff084d50e98ee79b731dd1d2a03 *R/TPLck.R
+b34c0e9f16569a41d617d344c056a341 *R/TPL.R
+be3f86e6dae138587f049fbef4a2f65f *R/TPLck.R
 f01e9831bf4997c132f67f0c0ac3d3ac *R/sysdata.rda
 c46d32ac6eb0a86b6f4d60ab9aba6669 *data/bryophytes.rda
-69a3697fd4c063c2012f89ffabb40398 *inst/NEWS.Rd
-910e4a5d512bdc3036cd45d17b6424bf *man/TPL.Rd
-50d15adea889c579e877f2b485318a27 *man/TPLck.Rd
+bee2cc41cf5e88a5ad3436a6db42f3ba *inst/NEWS.Rd
+e48f8fdadf28de601ada24db0b3b50fe *man/TPL.Rd
+455746b9fd2436ab334f3e8a37310d32 *man/TPLck.Rd
 3eebfe34e80f23a869c6757928a78435 *man/bryophytes.Rd
