@@ -2,12 +2,13 @@
 \title{Taxonstand News}
 \encoding{UTF-8}
 
-\section{Changes in version 2.2}{
+\section{Changes in version 2.3}{
 
   \subsection{NEW FEATURES}{
     \itemize{
 
-      \item Spelling errors can be now corrected also in the genus name prior to taxonomic standardization.
+      \item Since version 2.2 spelling errors can be corrected also in the genus name prior to taxonomic standardization.
+      \item Some bugs have been fixed in version 2.3 to allow for compatibility with some changes in the site's source code regarding empty spaces and line breaks, which produces NAs for some species.
 
      } %itemize
   } % features
